--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 
 Python implementation of:
 Capistran, Capella and Chirsten (2020), "Filtering and improved Uncertainty Quantification in the dynamic estimation of effective reproduction numbers"
+https://arxiv.org/abs/2012.02168
 
+A couple of bugg were corrected, to avoid errors when too low counts are used and when using predictions.
 
 Please go directly to code/Rts.py and follow the instructions within.
 
